<!--
  ~ Copyright (c) 2022. Viktor Pop
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">FCMTestingTool</string>
    <string name="nav_header_title">FCM Testing tool</string>
    <string name="nav_header_subtitle">This app is for development purposes only.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="menu_home">Home</string>
    <string name="menu_app_info">App Info</string>
    <string name="menu_device_info">Device Info</string>
    <string name="menu_fcm_info">FCM Info</string>
    <string name="menu_fcm_options">FCM Options</string>
    <string name="menu_about">About…</string>

    <string name="about_app_version_label">Version:</string>
    <string name="about_author_label">Author:</string>
    <string name="about_author_value" translatable="false">Viktor Pop</string>
    <string name="about_email_label">Email:</string>
    <string name="about_email_value" translatable="false">reboot297@gmail.com</string>
    <string name="about_source_label">Source:</string>
    <string name="about_source_value" translatable="false">https://github.com/reboot297/fcm-android-testing-tool</string>
    <string name="about_license_label">Licence:</string>
    <string name="about_license_value" translatable="false">https://github.com/reboot297/fcm-android-testing-tool/blob/main/LICENSE</string>
    <string name="about_description_value">This application is designed to check if you have received FCM notifications. To test FCM for your application, compile the source code from github with your "package name" and "google-services.json" file and install the apk on the device.</string>

    <string name="content_description_share">Share</string>
    <string name="content_description_delete">Delete</string>

    <string name="app_info_label_package_name">Package Name:</string>
    <string name="app_info_description_package_name"></string>
    <string name="app_info_label_sha_certificate">SHA Certificate:</string>
    <string name="app_info_description_sha_certificate"></string>

    <string name="fcm_info_label_project_id">Project Id:</string>
    <string name="fcm_info_description_project_id">A user-assigned unique identifier for your Firebase project. This identifier may appear in URLs or names for some Firebase resources, but it should generally be treated as a convenience alias to reference your project.</string>
    <string name="fcm_info_label_google_storage_bucket">Google storage bucket:</string>
    <string name="fcm_info_description_google_storage_bucket"></string>
    <string name="fcm_info_label_google_app_id">Google App ID:</string>
    <string name="fcm_info_description_google_app_id">Use this number to identify your app when you contact Firebase support.</string>
    <string name="fcm_info_label_google_api_key">Google API Key:</string>
    <string name="fcm_info_description_google_api_key"></string>
    <string name="fcm_info_label_google_crash_reporting_api_key">Google crash reporting api key:</string>
    <string name="fcm_info_description_google_crash_reporting_api_key"></string>
    <string name="fcm_info_label_gcm_default_sender_id">GCM default sender id:</string>
    <string name="fcm_info_description_gcm_default_sender_id"></string>
    <string name="fcm_info_label_default_web_client_id">Default web client id:</string>
    <string name="fcm_info_description_default_web_client_id"></string>

    <string name="device_info_label_network_status">Network Status:</string>
    <string name="device_info_description_network_status"></string>
    <string name="device_info_value_network_status_wifi">Wifi</string>
    <string name="device_info_value_network_status_mobile">Mobile</string>
    <string name="device_info_value_network_status_off">Offline</string>

    <string name="fcm_options_label_is_auto_init_enabled">isAutoInitEnabled: </string>
    <string name="fcm_options_description_is_auto_init_enabled">Determines whether FCM auto-initialization is enabled or disabled. When enabled, Firebase Cloud Messaging generates a registration token on app startup if there is no valid one (see getToken) and periodically sends data to the Firebase backend to validate the token. This setting is persisted across app restarts and overrides the setting specified in your manifest. </string>
    <string name="fcm_options_label_registration_token">Registration Token:</string>
    <string name="fcm_options_description_registration_token"></string>
</resources>