<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2022. Viktor Pop
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.reboot297.fcmtestingtool.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/menu_about"
        android:name="com.reboot297.fcmtestingtool.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_app_info"
        android:name="com.reboot297.fcmtestingtool.ui.info.app.AppInfoFragment"
        android:label="@string/menu_app_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/nav_device_info"
        android:name="com.reboot297.fcmtestingtool.ui.info.device.DeviceInfoFragment"
        android:label="@string/menu_device_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/nav_fcm_info"
        android:name="com.reboot297.fcmtestingtool.ui.info.fcm.FCMInfoFragment"
        android:label="@string/menu_fcm_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/nav_fcm_options"
        android:name="com.reboot297.fcmtestingtool.ui.options.fcm.FCMOptionsFragment"
        android:label="@string/menu_fcm_options"
        tools:layout="@layout/fragment_fcm_options" />
</navigation>