<!--
  ~ Copyright (c) 2022. Viktor Pop
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:barrierMargin="10dp"
            app:constraint_referenced_ids="app_version_label_view,author_label_view, email_label_view,source_label_view,license_label_view" />

        <TextView
            android:id="@+id/app_name_value_view"
            style="@style/AppTheme.About.AppName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/app_version_label_view"
            style="@style/AppTheme.About.Label"
            android:text="@string/about_app_version_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_name_value_view" />

        <TextView
            android:id="@+id/app_version_value_view"
            style="@style/AppTheme.About.Value"
            app:layout_constraintBottom_toBottomOf="@+id/app_version_label_view"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@+id/app_version_label_view" />

        <TextView
            android:id="@+id/author_label_view"
            style="@style/AppTheme.About.Label"
            android:text="@string/about_author_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_version_label_view" />

        <TextView
            android:id="@+id/author_value_view"
            style="@style/AppTheme.About.Value"
            android:text="@string/about_author_value"
            app:layout_constraintBottom_toBottomOf="@+id/author_label_view"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@+id/author_label_view" />

        <TextView
            android:id="@+id/email_label_view"
            style="@style/AppTheme.About.Label"
            android:text="@string/about_email_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/author_label_view" />

        <TextView
            android:id="@+id/email_value_view"
            style="@style/AppTheme.About.Value"
            android:autoLink="email"
            android:text="@string/about_email_value"
            app:layout_constraintBottom_toBottomOf="@+id/email_label_view"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@+id/email_label_view" />

        <TextView
            android:id="@+id/source_label_view"
            style="@style/AppTheme.About.Label"
            android:text="@string/about_source_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_value_view" />

        <TextView
            android:id="@+id/source_value_view"
            style="@style/AppTheme.About.Value"
            android:autoLink="web"
            android:text="@string/about_source_value"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@+id/source_label_view" />

        <TextView
            android:id="@+id/license_label_view"
            style="@style/AppTheme.About.Label"
            android:text="@string/about_license_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/source_value_view" />

        <TextView
            android:id="@+id/license_value_view"
            style="@style/AppTheme.About.Value"
            android:autoLink="web"
            android:text="@string/about_license_value"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@+id/license_label_view" />

        <TextView
            android:id="@+id/description_value_view"
            style="@style/AppTheme.About.Description"
            android:text="@string/about_description_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/license_value_view" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>