<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2022. Viktor Pop
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:animateLayoutChanges="true">

    <TextView
        android:id="@+id/labelView"
        style="@style/AppTheme.Options.Label"
        android:text="@string/fcm_options_label_registration_token"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/valueView"
        style="@style/AppTheme.Options.Value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelView"
        tools:text="Value" />

    <TextView
        android:id="@+id/descriptionView"
        style="@style/AppTheme.Options.Description"
        android:layout_marginTop="8dp"
        android:text="@string/fcm_options_description_registration_token"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valueView" />

    <ImageView
        android:id="@+id/deleteView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/content_description_delete"
        android:src="@drawable/ic_baseline_delete"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/shareView"
        app:layout_constraintTop_toBottomOf="@+id/descriptionView" />

    <ImageView
        android:id="@+id/shareView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/content_description_share"
        android:src="@drawable/ic_baseline_share"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/expandView"
        app:layout_constraintTop_toBottomOf="@+id/descriptionView" />

    <CheckedTextView
        android:id="@+id/expandView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkMark="@drawable/expand_button"
        android:checked="false"
        android:gravity="center_horizontal|bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionView" />

</androidx.constraintlayout.widget.ConstraintLayout>